# DomiBotTelegram

./: .env  README.md  calculos.py  main.py  pyproject.toml  requirements.txt
