[tool.poetry]
name = "repl_python3_beta_DomiBot"
version = "0.1.1"
description = "Is a bot for handlign deliverys in telegram"
authors = ["Arturo Rebolledo <arturo2r@inmensity.co>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.4.1"
python-decouple = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
